--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -362,3 +362,28 @@ i {
   width: 99vw;
   position: absolute;
 }
+
+.ml6 {
+  position: relative;
+  font-weight: 900;
+  font-size: 5vw;
+  text-align: center;
+  justify-content: center;
+  vertical-align: middle;
+  top: 30%;
+  color: white;
+}
+
+.ml6 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml6 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
