added pulsing letters

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -387,3 +387,21 @@ i {
   display: inline-block;
   line-height: 1em;
 }
+
+#cover-click {
+  font-size: 2vw;
+  -webkit-animation: pulsate 1s ease-out;
+  -webkit-animation-iteration-count: infinite; 
+  opacity: 0.5;
+}
+@-webkit-keyframes pulsate {
+  0% { 
+      opacity: 0.1;
+  }
+  50% { 
+      opacity: 1.0;
+  }
+  100% { 
+      opacity: 0.1;
+  }
+}
