--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -151,7 +151,7 @@ i {
 }
 
 .card {
-  height: fit-content;
+  height: 313.71px;
   width: 45%;
 }
 
@@ -162,7 +162,7 @@ i {
 }
 
 .img {
-  height: 100%;
+  height: 312px;
   width: 100%
 }
 
