--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
-html {
+/* html {
   scroll-snap-type: y mandatory;
-}
+} */
 
 #navbar {
   background-color: #343a40;
@@ -132,8 +132,8 @@ i {
   background-color: #343a40;
   justify-content: center;
   text-align: center;
-  scroll-snap-align: start;
-  height: 100vh;
+  /* scroll-snap-align: start; */
+  height: fit-content;
   margin-bottom: 0;
 }
 
@@ -158,7 +158,8 @@ i {
 #cards-row {
   justify-content: space-between;
   padding-bottom: 62px;
-  height: 80vh;
+  height: fit-content;
+  padding-top: 40px;
 }
 
 .img {
@@ -404,4 +405,26 @@ i {
   100% { 
       opacity: 0.1;
   }
+}
+
+#filter-title {
+  color: white;
+  font-size: 1.25vw;
+}
+
+#filter-buttons {
+  padding-top: 20px;
+}
+
+.button {
+  margin-left: 5px;
+  margin-right: 5px;
+  color: #343a40;
+  background-color: white;
+  border-style: none;
+}
+
+.button:hover {
+  color: white;
+  background-color: #343a40;
 }
