--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,7 +25,7 @@
 
 #social-bar li {
   height: 45px;
-  position: relative
+  position: relative;
 }
 
 #social-bard li a {
@@ -34,54 +34,54 @@
   height: 100%;
   width: 100%;
   line-height: 45px;
-  border-bottom: 1px solid rgba(0, 0, 0, .4);
-  transition: all .3s linear;
-  text-decoration: none !important
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  transition: all 0.3s linear;
+  text-decoration: none !important;
 }
 
 #social-bar li:nth-child(1) a {
-  background: #4267B2
+  background: #4267b2;
 }
 
 #social-bar li:nth-child(2) a {
-  background: #1DA1F2
+  background: #1da1f2;
 }
 
 #social-bar li:nth-child(3) a {
-  background: #E1306C
+  background: #e1306c;
 }
 
 #social-bar li:nth-child(4) a {
-  background: #2867B2
+  background: #2867b2;
 }
 
 #social-bar li:nth-child(5) a {
-  background: #333
+  background: #333;
 }
 
 #social-bar li:nth-child(6) a {
-  background: #ff0000
+  background: #ff0000;
 }
 
 #social-bar li a i {
   position: absolute;
   top: 14px;
   left: 24px;
-  font-size: 15px
+  font-size: 15px;
 }
 
 #social-bar ul li a span {
   display: none;
   font-weight: bold;
   letter-spacing: 1px;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 #social-bar a:hover {
   z-index: 1;
   width: 200px;
-  border-bottom: 1px solid rgba(0, 0, 0, .5);
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, .3)
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 .jumbotron {
@@ -185,7 +185,7 @@ i {
   overflow: hidden;
 }
 
-@media (max-width:975px) {
+@media (max-width: 975px) {
   .card-text {
     font-size: 1vh;
   }
@@ -266,7 +266,7 @@ i {
   top: 50%;
 }
 
-.contact-info-links a{
+.contact-info-links a {
   text-decoration: none;
 }
 
@@ -294,71 +294,72 @@ i {
 }
 
 .timeline-steps {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .timeline-steps .timeline-step {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin: 1rem
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 1rem;
 }
 
-@media (min-width:768px) {
-    .timeline-steps .timeline-step:not(:last-child):after {
-        content: "";
-        display: block;
-        border-top: .25rem dotted #3b82f6;
-        width: 3.46rem;
-        position: absolute;
-        left: 7.5rem;
-        top: .3125rem
-    }
-    .timeline-steps .timeline-step:not(:first-child):before {
-        content: "";
-        display: block;
-        border-top: .25rem dotted #3b82f6;
-        width: 3.8125rem;
-        position: absolute;
-        right: 7.5rem;
-        top: .3125rem
-    }
+@media (min-width: 768px) {
+  .timeline-steps .timeline-step:not(:last-child):after {
+    content: "";
+    display: block;
+    border-top: 0.25rem dotted #3b82f6;
+    width: 3.46rem;
+    position: absolute;
+    left: 7.5rem;
+    top: 0.3125rem;
+  }
+  .timeline-steps .timeline-step:not(:first-child):before {
+    content: "";
+    display: block;
+    border-top: 0.25rem dotted #3b82f6;
+    width: 3.8125rem;
+    position: absolute;
+    right: 7.5rem;
+    top: 0.3125rem;
+  }
 }
 
 .timeline-steps .timeline-content {
-    width: 10rem;
-    text-align: center
+  width: 10rem;
+  text-align: center;
 }
 
 .timeline-steps .timeline-content .inner-circle {
-    border-radius: 1.5rem;
-    height: 1rem;
-    width: 1rem;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #3b82f6
+  border-radius: 1.5rem;
+  height: 1rem;
+  width: 1rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #3b82f6;
 }
 
 .timeline-steps .timeline-content .inner-circle:before {
-    content: "";
-    background-color: #3b82f6;
-    display: inline-block;
-    height: 3rem;
-    width: 3rem;
-    min-width: 3rem;
-    border-radius: 6.25rem;
-    opacity: .5
+  content: "";
+  background-color: #3b82f6;
+  display: inline-block;
+  height: 3rem;
+  width: 3rem;
+  min-width: 3rem;
+  border-radius: 6.25rem;
+  opacity: 0.5;
 }
 
 .experience-desc-text {
   margin-top: 45px;
-  font-size: 3.5vh;
-  color: #343a40;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.5vw;
+  color: #6c757d;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #cover {
@@ -396,18 +397,18 @@ i {
 #cover-click {
   font-size: 2vw;
   -webkit-animation: pulsate 1s ease-out;
-  -webkit-animation-iteration-count: infinite; 
+  -webkit-animation-iteration-count: infinite;
   opacity: 0.5;
 }
 @-webkit-keyframes pulsate {
-  0% { 
-      opacity: 0.1;
+  0% {
+    opacity: 0.1;
   }
-  50% { 
-      opacity: 1.0;
+  50% {
+    opacity: 1;
   }
-  100% { 
-      opacity: 0.1;
+  100% {
+    opacity: 0.1;
   }
 }
 
